# SLEngine

./: .gitignore  CMakeLists.txt  README.md  cfg_const_vars.lua  cfg_paths.lua  config.lua  imgui.ini  luengine [WindowsTerminal].bat  luengine.ilk  on_engine_init.lua  on_lua_init.lua  sl_engine [WindowsTerminal].bat  test.lua
Debug Mod/lua/: config.lua
bp_mods/FFLauncher/: info_bp.lua
bp_mods/FFLauncher/lua/: on_init.lua
cfg/: cfg_ansi_codes.lua  cfg_blueprints.lua  cfg_control_codes.lua  cfg_term_colors.lua
src/: main.cpp
src/.legacy_code/: math.hpp
src/console/: console_wrapper.hpp
src/lua/: init_lua_modules.cpp  lua_env.hpp
src/lua/api/: console.cpp  console.h  math.hpp
src/lua/utils/: converters.cpp  converters.h
src/render/: main_render.cpp  main_render.h  render_frame.cpp  render_frame.h  ui_el_logic.cpp  ui_el_logic.h  ui_init.cpp  ui_init.h  window_init.cpp  window_init.h
src/utils/: file_sys.cpp  file_sys.h  text.cpp  text.h
srceng/: main.cpp
srceng/console/: console_additions.cpp  console_additions.h  console_wrapper.hpp
srceng/glua/: base_api.hpp  console.cpp  init_lua_modules.cpp  init_lua_modules.h  lua_env.hpp  math.hpp  reg.cpp
srceng/glua/api/: console.cpp  console.h
srceng/glua/utils/: converters.h
srceng/lua/: init_lua_modules.cpp  lua_env.hpp
srceng/render/: render_main.cpp  render_main.h
srceng/utils/: file_sys.cpp  file_sys.h  other.cpp  other.h
tutorial/: how_to_run_engine.txt
